Add pacemaker provider for HA services
* Add pacemaker service provider and unit tests
* Add generic OCF handler script for RA scripts
* Add service class and docs for pacemaker primitives creation with
  default OCF type = pacemaker
* Add specs for pacemaker service define

Implements step 1 of blueprint pacemaker-provider-for-openstack

Change-Id: I5d98d8f9494bb7df4466022b3d49ac6392deb1a5
Co-Author: Dmitry Ilyin (idv1985 <dilyin@mirantis.com>)
Signed-off-by: Bogdan Dobrelya <bdobrelia@mirantis.com>

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,5 +1,6 @@
 fixtures:
   repositories:
+    'corosync': 'https://github.com/puppetlabs/puppetlabs-corosync'
     'apt'    : 'git://github.com/puppetlabs/puppetlabs-apt'
     'stdlib' : 'git://github.com/puppetlabs/puppetlabs-stdlib'
   symlinks:
