--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,5 +3,9 @@ fixtures:
     'corosync': 'https://github.com/puppetlabs/puppetlabs-corosync'
     'apt': 'git://github.com/puppetlabs/puppetlabs-apt'
     'stdlib' : 'git://github.com/puppetlabs/puppetlabs-stdlib'
+    'glance' : 'git://github.com/openstack/puppet-glance'
+    'keystone' : 'git://github.com/openstack/puppet-keystone'
+    'inifile':  'git://github.com/puppetlabs/puppetlabs-inifile'
+    'openstacklib': 'git://github.com/stackforge/puppet-openstacklib.git'
   symlinks:
     'openstack_extras': "#{source_dir}"
