--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = puppet-openstack_extras
 summary = Puppet module for OpenStack Openstack_extras
 description-file =
     README.md
-author = Puppet Labs and OpenStack Contributors
+author = OpenStack
 author-email = openstack-dev@lists.openstack.org
 home-page = http://docs.openstack.org/developer/puppet-openstack-guide
 classifier =
