Remove packaging files
This repository does not actually contain any python package.

Change-Id: I79ccf19e64cbc9756cd44a9fff21f409c8861fd9
Signed-off-by: Takashi Kajinami <kajinamit@oss.nttdata.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,8 @@
 [tox]
 minversion = 3.1
-skipsdist = True
 envlist = releasenotes
-ignore_basepython_conflict = True
-
-[testenv]
-basepython = python3
-install_command = pip install -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master} {opts} {packages}
 
 [testenv:releasenotes]
-deps = -r{toxinidir}/doc/requirements.txt
+deps = -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+       -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/doctrees -b html releasenotes/source releasenotes/build/html
